# ReleaseBoard

./: README.md  pyproject.toml
docs/: troubleshooting.md
scripts/: pre-commit
src/releaseboard/: __init__.py
src/releaseboard/application/: service.py
src/releaseboard/config/: schema.py
src/releaseboard/git/: github_provider.py  gitlab_provider.py  provider.py  smart_provider.py
src/releaseboard/i18n/: __init__.py
src/releaseboard/i18n/locales/: en.json  pl.json
src/releaseboard/integrations/releasepilot/: adapter.py  models.py
src/releaseboard/presentation/: renderer.py  view_models.py
src/releaseboard/presentation/templates/: _dashboard_content.html.j2  _modals.html.j2  _quick_settings.html.j2  _release_wizard.html.j2  _scripts_analysis.html.j2  _scripts_config_ui.html.j2  _scripts_core.html.j2  _scripts_editor.html.j2  _scripts_interactive.html.j2  _scripts_release_calendar.html.j2  _scripts_release_calendar_ext.html.j2  _scripts_release_wizard.html.j2  _scripts_wizard.html.j2  _styles.html.j2  first_run.html.j2
src/releaseboard/web/: cors.py  middleware.py  server.py  state.py
tests/: test_config_resilience.py  test_config_save_compliance.py  test_first_run.py  test_git_providers.py  test_gitlab_auth_branch_resolution.py  test_i18n_sse_datetime.py  test_output_templates.py  test_production_audit_fixes.py  test_production_blockers.py  test_provider_url_ssl.py
