[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "releaseboard"
version = "1.1.0"
description = "Internal release-readiness dashboard for engineering teams"
readme = "README.md"
license = "AGPL-3.0-only"
requires-python = ">=3.12"
authors = [
    { name = "ReleaseBoard Team" },
]
keywords = ["release", "dashboard", "git", "branch", "readiness"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Build Tools",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.9.0",
    "jinja2>=3.1.0",
    "jsonschema>=4.20.0",
    "rich>=13.0.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "ruff>=0.2.0",
]
releasepilot = [
    "releasepilot @ git+https://github.com/polprog-tech/ReleasePilot.git",
]

[tool.hatch.metadata]
allow-direct-references = true

[project.scripts]
releaseboard = "releaseboard.cli.app:app"

[tool.hatch.build.targets.wheel]
packages = ["src/releaseboard"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"src/releaseboard/cli/app.py" = ["B008"]  # typer.Option() in defaults is standard typer pattern
